samples/_failures_safe/1761276098_179dc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c3f92f2.c: In function ‘main’:
./samples/SAFE/__tmp_6c3f92f2.c:143:5: error: expected declaration or statement at end of input
  143 |     display_recent_logs(entries, entry_count, num_to_show);
      |     ^~~~~~~~~~~~~~~~~~~
